Make Resource.getString explicit. Handle [Module] and [Help Menu] correctly. Clean out some warnings. Safeguard Prev from new search strings (unsupported). Retain editor position after a failed search.